creating ChangeLog
2002-11-20 David Malcolm

	* global.h

	CongEditorWidget support

        * cong-editor-widget.c, cong-element-editor.c, cong-section-head-editor.c, cong-editor-widget-impl.h, cong-span-text-editor.c

	Further development

        * cong-editor-widget.c, cong-element-editor.c, cong-section-head-editor.c, cong-editor-widget-impl.h, cong-span-text-editor.c

	Initial imports
	
2002-11-19 David Malcolm

	* cong-plugin.c, cong-primary-window.c, global.h, new_doc.c, plugin-docbook.c

	Plugin enhancements

	* main.c

	Better error message
	
2002-11-15 David Malcolm

        * Makefile.am, cong-primary-window.c, global.h, main.c, new_doc.c

	Creation of plugin architecture
	
        * cong-plugin.c, plugin-docbook.c

	Initial imports
	
	* cong-dialog.c, cong-document.c, cong-error-dialog.c, cong-primary-window.c, global.h

	Dialog refactoring
	
2002-11-15 Doug Daniels/Brent Hendricks

	* cong-primary-window.c

	Save confirmation alert
	
2002-11-14 David Malcolm

	* cong-primary-window.c, global.h, main.c

	More test menu items

	* cong-tree-view.c, dispspec.c, position.c, xmledit.c, xmlview.c

	Optimisations
	
2002-11-14 Doug Daniels/Brent Hendricks

	* cong-document.c, cong-primary-window.c, save.c, global.h

	Fixes for "File->Save As" and "File->Save"
	
2002-11-14 Geert Stappers

	* cong-primary-window.c
	
	Version support in "About" dialog
	
2002-11-13 David Malcolm

	* fo-parser-result.c, fo-print-context.c, fo-rect.c, fo-solver-result.c, fo-tests.c, fo.h

	Further fo work
	
        * cong-primary-window.c, global.h, main.c, xmldata.c

	Added some tests plus a File->Properties implementation 

	* popup.c, tree.c

	Enhancements to the context menu
	
	* Makefile.am

	Added cong-dialog.c and the fo files	

	* cong-dialog.c

	Initial import
	
2002-11-10 David Malcolm

	* fo.h, fo-parser-result.c, fo-print-context.c, fo-rect.c, fo-solver-result.c, fo-tests.c 

	Fleshing out XSL:FO code
	
2002-11-09 David Malcolm
